refactor ogc api auto mode (#1095)